<resources>
    <string name="app_name">识趣情绪助手</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">"请输入密码"</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_1">"让他/她更懂你"</string>
    <string name="LoginBtn">一键登录</string>
    <string name="LoginText">账号密码登录</string>
    <string name="prompt_username">"请输入账号"</string>
    <string name="prompt_user">我已经阅读并同意《隐私说明》</string>
    <string name="prompt_loginother">未注册</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_agreement">"更新日期：2024年6月30日\n生效日期：2024年6月30日\n\n    小龚作为本应用的运营者，深知个人信息对用户的重要性，并会尽全力保护用户的个人信息安全可靠。小龚致力于维护用户对小龚的信任，恪守以下原则，保护用户的个人信息：权责一致原则、目的明确原则、选择同意原则、最少够用原则、确保安全原则、主体参与原则、公开透明原则等。同时，小龚承诺，将按业界成熟的安全标准，采取相应的安全保护措施来保护用户的个人信息。 请用户在使用本应用及相关服务前务必审慎阅读、充分理解各条款内容，特别是免除或限制责任的相应条款，以及开通或使用某项服务的单独协议，并选择接受或不接受。限制、免责条款可能以加粗及下划线形式提示用户注意。 如用户未明示同意本隐私声明并开始使用，小龚将仅收集为本应用软件运行所必需的信息，这将导致小龚无法为用户提供完整的产品和服务，但小龚同样会采用去标识化、加密等措施来保护这些信息。小龚将在明确获得用户的同意和接受后，为用户提供相应的服务。当用户选择继续或再次使用时，基于提供产品和服务所必需，将视为用户接受和认可小龚按照本声明对用户的相关信息进行处理。为了给用户提供更好的服务，小龚会根据产品的更新情况及法律法规的相关要求更新本政策的条款，该更新构成本政策的一部分。当隐私协议在用户使用后发生变更时，小龚将以信息推送形式等通知用户。若用户继续使用小龚的服务，需要审慎地阅读变更后的协议。用户有权不接受修改后的协议，应当停止使用本应用提供的软件或服务。 用户有违反本协议的任何行为时，小龚有权依照违反情况，随时单方限制、中止或终止向用户提供本服务，并有权追究用户的相关责任。 如果用户未满 18 周岁，请在监护人的陪同下阅读本协议及其他上述协议，并事先取得家长或法定监护人的同意。若用户是未成年人的监护人，当用户对所监护的未成年人的个人信息有相关疑问时，请通过本隐私政策约定的联系方式与小龚联系。\n\n\n\n"</string>
    <string name="user_agreement">"
为使用本软件及服务，您应当阅读并遵守《本软件许可协议》（以下简称（本协议）。请您务必审慎阅读，从分理解各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议，并选择接受或不接受。限制，免责条款可能以加粗形式提示您注意。

除非您已阅读并接受本协议所有条款，否则您无权下载，安装或使用本软件及相关服务。您的下载，安装，登录等使用行为即视为您已阅读并同意上述协议的约束。 如果您未满18周岁，请在法定监护人的陪同下阅读本协议及其他上述协议，并特别注意未成年人使用条款。

一， 协议的范围

本协议是您与本软件之间关于您下载，安装，使用，复制本软件，以及使用本软件相关服务所订立的协议。

二， 关于本服务

本服务内容是指本软件客户端软件提供包括但不限于IOS及Android等多个版本，您必须选择与所安装手机相匹配的软件版本。

三， 软件的获取

您可以直接从本软件授权的第三方获取。

如果您从未经本软件授权的第三方获取本软件或与本软件名称相同的安装程序，本软件无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。下载安装程序后，您需要按照该程序提示的步骤正确安装。

为提供更加优质，安全的服务，在本软件安装时本软件可能推荐您安装其他软件，您可以选择安装或不安装。

如果您不再需要使用本软件或者需要安装新版本软件，可以自行卸载。

四， 软件的更新

为了改善用户体验，完善服务内容，本软件将不断努力开发新的服务，并为您不时提供软件更新(这些更新可能会采取软件替换，修改，功能强化，版本升级等形式)。

为了保证本软件及服务的安全性和功能的一致性，本软件有权不向您特别通知而对软件进行更新，或者对软件的部分功能效果进行改变或限制。

本软件新版本发布后，旧版本的软件可能无法使用，本软件部保证旧版本软件继续可用及相应的服务，请您随时核对并下载最新版本。

五， 用户个人信息保护

保护用户个人信息是本软件的一项基本原则，本软件将会采取合理的措施保护用户的信息。除法律法规规定的情形外，未经用户许可本软件不会向第三方公开，透漏用户个人信息。为了向用户提供相关服务功能或改善技术和服务，您在注册账号或使用本服务的过程中，可能需要提供一些必要信息，本软件对相关信息采用国际化标准的加密存错与传输方式，保障用户个人信息的安全。

未经您的同意，本软件不会向本软件以外的任何公司，组织和个人披露您的个人信息，但法律法规另有规定的除外。

本软件非常重视对未成年人个人信息的保护。若您是18周岁以下的未成年人，在使用本软件的服务前，应事先取得您家长或法定监护人的书面同意。

六， 主权力义务条款

本软件特别提醒您应妥善保管您的账号，当您使用完毕后，应安全退出。

用户注意事项：您的理解并同意，为了向您提供有效的服务，您在此许可本软件利用您移动通讯终端设备的处理器和宽带等资源。本软件使用过程中可能产生的数据流量的费用，您需自行向运营商了解相关资费信息。

七， 用户行为规范

您在使用本服务时需遵守法律法规，社会主义制度，国家利益，公民合法权利，社会公共秩序，道德风尚及信息真实性等“七条底线“要求。

八， 软件使用规范

除非法律允许或本软件的书面许可，您使用本软件过程中不得删除本软件及其副本上关于知识产权的信息，不得对本软件进行反向工程等或以其他方式尝试发现本软件的源代码。

九， 对自己行为负责

\n您充分了解并同意，您必须为自己注册账号下的一切行为负责。

\n十， 其他

"</string>
    <string name="prompt_phone">请输入手机号</string>
</resources>