<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".moudle.LoginActivity">

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="phone"
        android:paddingLeft="12dp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:paddingLeft="12dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/LoginText"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/background_org"
        android:text="@string/LoginBtn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:strokeColor="#E78A22" />

    <RadioButton
        android:id="@+id/privacy_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/prompt_user"
        android:textSize="13sp"
        android:buttonTint="@color/background_org"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/back_btn_1"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:layout_marginTop="60dp"
        android:background="@mipmap/f1"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view6"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="@color/grey_deep"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/privacy_btn_1" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="@color/grey_deep"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/privacy_btn_1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/prompt_loginother"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/privacy_btn_1" />

    <Button
        android:id="@+id/register_btn_1"
        android:layout_width="30dp"
        android:layout_height="28dp"
        android:layout_marginTop="48dp"
        android:background="@mipmap/r1"
        android:buttonTint="@color/background_org"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="注册"
        app:layout_constraintEnd_toEndOf="@+id/register_btn_1"
        app:layout_constraintStart_toStartOf="@+id/register_btn_1"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_1"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>