<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".moudle.RegisterActivity">

    <Button
        android:id="@+id/back_btn_2"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:layout_marginTop="68dp"
        android:background="@mipmap/f1"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:paddingLeft="12dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/register_phone"
        app:layout_constraintTop_toBottomOf="@+id/register_phone" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="329dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:paddingLeft="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="329dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="phone"
        android:paddingLeft="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_phone"
        app:layout_constraintTop_toBottomOf="@+id/prompt_2" />

    <Button
        android:id="@+id/register_btn_2"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/background_org"
        android:text="一键注册"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_password"
        app:layout_constraintStart_toStartOf="@+id/register_password"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <TextView
        android:id="@+id/prompt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="账号注册"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/register_username"
        app:layout_constraintTop_toBottomOf="@+id/back_btn_2" />
</androidx.constraintlayout.widget.ConstraintLayout>